--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,16 @@
   "version": "1.0",
   "description": "Build an Extension!",
   "manifest_version": 2,
-
-  “chrome_url_overrides” : {
-	“newtab": “silverHappiness.html”
+  "icons": {
+    "32": "silver-happiness.png"
+  },
+  "browser_action": {
+    "32": "silver-happiness.png"
+  },
+  "chrome_url_overrides": {
+    "newtab": "silver-happiness.html"
   }
+
+  
+
 }
